--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -2,6 +2,21 @@
 // Option B: Include parts of Bootstrap
 // https://getbootstrap.com/docs/5.2/customize/sass/
 
+.text-box {
+    background-color: rgb(235, 235, 235); /* Background color with transparency */
+    border: 2px solid #ccc; /* Border color and thickness */
+    border-radius: 10px; /* Rounded corners */
+    padding: 20px; /* Padding inside the box */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Box shadow for depth */
+
+    transition: background-color 0.2s ease-in-out; /* Add transition effect for background color */
+
+    /* Define hover state */
+    &:hover {
+        background-color: rgba(255, 200, 50, 0.70); /* Change background color on hover */
+    }
+}
+
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
 @import "bootstrap/functions";
 
