--- a/layouts/partials/features.html
+++ b/layouts/partials/features.html
@@ -1,42 +1,47 @@
-<!-- Featueres section -->
+<!-- Features section -->
+
+<style>
+    .feather {
+        stroke: rgb(0,100,215); /* Initial fill color */
+        transition: fill 0.2s ease-in-out; /* Add transition effect for smooth color change */
+    }
+
+    /* Change fill color to rgb(0,170,255) when hovered */
+    .feather:hover {
+        stroke: rgb(0,170,255);
+    }
+</style>
 
 <div class="row justify-content-center text-center mt-lg-3">
     <div class="col-lg-4">
         <svg xmlns='http://www.w3.org/2000/svg' class='feather text-violet feather-big' width="4em" height="4em">
-            <use href="{{ `images/feather/feather-sprite.svg#shield` | relURL }}"/>
+            <use href="{{ `images/feather/feather-sprite.svg#share-2` | relURL }}"/>
         </svg>
-        <h2 class="h2">Security aware <small class="d-none">🛡️</small></h2>
-        <p>Get A+ scores on <a href="https://observatory.mozilla.org/" target="_blank" rel="noopener">Mozilla Observatory</a>
-            out of the box. Easily change the default Security Headers to suit your needs.</p>
+        <h2 class="h2">Group Your Tabs <small class="d-none">✨</small></h2>
+        <p>Organize your tabs based on different topics so that you can easily switch between projects.</p>
     </div>
     <div class="col-lg-4">
         <svg xmlns='http://www.w3.org/2000/svg' class='feather text-violet feather-big' width="4em" height="4em">
-            <use href="{{ `images/feather/feather-sprite.svg#zap` | relURL }}"/>
+            <use href="{{ `images/feather/feather-sprite.svg#wind` | relURL }}"/>
         </svg>
-        <h2 class="h2">Fast by default <small class="d-none">🚀</small></h2>
-        <p>Get 100 scores on <a href="https://googlechrome.github.io/lighthouse/viewer/?gist=1f990bcb2d769bb4e82e7fc7a8be2b1f" target="_blank" rel="noopener">Google Lighthouse</a>
-             by default. Hugo Bootstrap Theme removes unused css, prefetches links, and lazy loads images.</p>
-    </div>
-    <div class="col-lg-4">
-        <svg xmlns='http://www.w3.org/2000/svg' class='feather text-violet feather-big' width="4em" height="4em">
-            <use href="{{ `images/feather/feather-sprite.svg#trending-up` | relURL }}"/>
-        </svg>
-        <h2 class="h2">SEO-ready <small class="d-none">📈</small></h2>
-        <p>Use sensible defaults for structured data, <a href="https://ogp.me/" target="_blank" rel="noopener">open graph</a>, and <a href="https://developer.twitter.com/en/docs/tweets/optimize-with-cards/overview/abouts-cards" target="_blank" rel="noopener">Twitter cards</a>. Or easily change the Search Engine Optimization settings to your liking.</p>
+        <h2 class="h2">Clean Your Browser <small class="d-none">🦉</small></h2>
+        <p>Collapse and expand your tab groups to declutter your browser window and reduce distractions.</p>
     </div>
 </div>
 
 <div class="row justify-content-center text-center mt-lg-3">
     <div class="col-lg-4">
-        <h2 class="h2">Hugo <small class="d-none">🦉</small></h2>
-        <p><a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a> is one of the most popular open-source static site generators. With its amazing speed and flexibility, Hugo makes building websites fun again.</p>
+        <svg xmlns='http://www.w3.org/2000/svg' class='feather text-violet feather-big' width="4em" height="4em">
+            <use href="{{ `images/feather/feather-sprite.svg#tag` | relURL }}"/>
+        </svg>
+        <h2 class="h2">Label Your Groups <small class="d-none">✨</small></h2>
+        <p>Label your tabs groups with custom names to keep your projects easily identifiable.</p>
     </div>
     <div class="col-lg-4">
-        <h2 class="h2">Bootstrap <small class="d-none">✨</small></h2>
-        <p>Powerful, extensible, and feature-packed <a href="https://getbootstrap.com/" target="_blank" rel="noopener">frontend toolkit</a>. Build and customize with Sass, utilize prebuilt grid system and components, and bring projects to life with powerful JavaScript plugins.</p>
-    </div>
-    <div class="col-lg-4">
-        <h2 class="h2">Page layouts <small class="d-none">🧰</small></h2>
-        <p>Build pages with a landing page, blog, or documentation layout. Add custom sections and components to suit your needs.</p>
+        <svg xmlns='http://www.w3.org/2000/svg' class='feather text-violet feather-big' width="4em" height="4em">
+            <use href="{{ `images/feather/feather-sprite.svg#settings` | relURL }}"/>
+        </svg>
+        <h2 class="h2">Automate Your Grouping <small class="d-none">🧰</small></h2>
+        <p>Receive suggestions of tab grouping and names to streamline your workflow.</p>
     </div>
 </div>
