--- a/layouts/partials/featured-pages.html
+++ b/layouts/partials/featured-pages.html
@@ -4,7 +4,7 @@
             <div class="card text-box">
                 <div class="card-body">
                     <h4 class="card-title">
-                        <a class="stretched-link text-primary text-decoration-none" href="{{ .Permalink }}">
+                        <a class="stretched-link text-primary text-decoration-none" href="{{ .RelPermalink }}">
                             {{ .Title }}
                         </a>
                     </h4>
