Added video to the main page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -27,6 +27,17 @@
   {{ partial "features" . }}
 </section>
 
+<section class="section container my-5">
+  <h2 class="text-secondary fw-bold text-center my-5">Watch How It Works</h2>
+  <div class="row justify-content-center">
+    <div class="col-lg-5">
+      <div class="video-responsive">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/4T94TsK5IlQ?si=-DOvHLMxntI0D_Y4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- 
 <section class="section container my-5">
   <h2 class="text-secondary text-center my-5">Features in Development</h2>
