Info about the software license added

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
       <h1 class="display-4 fw-semibold mb-3">{{ .Site.Title }}</h1>
       <p class="lead mb-4">{{ .Site.Params.Description }}</p>
       <a class="btn btn-bd-primary btn-lg px-4 mb-2" href="https://github.com/guifeitosabr/s24-team-09" role="button">Get Started</a>
-      <!-- <p class="text-muted mb-0">Open-source MIT Licensed.</p> -->
+      <p class="text-muted mb-0">Open-source MIT Licensed.</p>
       <h3 class="text-secondary text-center mt-5">Sea of Tabs?</h3>
       <h2 class="text-secondary fw-bold text-center my-3">Find Your Flow.</h2>
     </div>
